# bitcoin-utxo

./: .gitignore  Cargo.toml  README.md  shell.nix
examples/: days.rs  filters.rs
nix/: pkgs.nix
src/: connection.rs  lib.rs  storage.rs  sync.rs  utxo.rs
src/cache/: utxo.rs
src/connection/: codec.rs  message.rs  mod.rs
src/storage/: chain.rs  mod.rs  scheme.rs  utxo.rs
src/sync/: barrier.rs  headers.rs  mod.rs  utxo.rs
