[package]
name = "bitcoin-utxo"
version = "0.1.0"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin =  { version = "^0.26", features = [ "rand" ] }
bitcoin_hashes = "^0.9"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "^0.6", features = [ "codec" ] }
tokio-stream = "0.1"
rocksdb = "0.15.0"
byteorder = "1"
chashmap = "^2.2"
byte-strings = "^0.1"
