[package]
name = "bitcoin-utxo"
version = "0.1.0"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin =  { version = "^0.26", features = [ "rand" ] }
bitcoin_hashes = "^0.9"
byte-strings = "^0.1"
byteorder = "1"
bytes = "1"
chrono = "^0.4"
dashmap = "^4.0"
futures = "0.3"
rocksdb = "0.15.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "^0.6", features = [ "codec" ] }
